# VG101

./: README.md  ex5.tar
Assignment 1/: Ex2.m  Ex3.m  Ex4.m  Ex5.m  Ex6.m  Ex7.m  README.md
Assignment 2/: Ex1.m  Ex2.m  Ex3.m  Ex4_Iteration.m  Ex4_Recursion.m  Ex5.m  Ex6_zeller.m  README.txt  ex3_nonrec.m  ex3_recursion.m
Assignment 3/: Ex1.m  Ex2.m  Ex3.m  Ex3_Output.txt  Ex4.m  Ex5.m  Ex6.asv  Ex6.m  Ex6_Output.txt  README.txt
Assignment 4/: CMakeLists.txt  README.txt  ex1.c  ex2.c  ex3.c  ex4.c
Assignment 4/ex5/: CMakeLists.txt  main.c  mpow.c  mpow.h  prod.c  prod.h  quo.c  quo.h  rem.c  rem.h  sum.c  sum.h
Assignment 5/: CMakeLists.txt  Readme.txt  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  readme.txt
Assignment 6/: CMakeLists.txt  Ex6  Readme.txt  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  list.h  sentence.txt
Exercise/: Ex3_Graph.m  queen_8.m
Project 1/: Ex2_1b_Fail 2.m  Ex2_1b_Fail.m  README.txt  p1_crash.m  p1_displaycar.m  p1_drawroad.m  p1_ex2_1a.m  p1_ex2_1b.m  p1_finish.m  p1_getplate.m  p1_initialize.asv  p1_initialize.m  p1_input.m  p1_light.m  p1_main.m  p1_move.asv  p1_move.m  p1_output.m
p1/: Ex2_1a.m  p1_crash.m  p1_displaycar.m  p1_drawroad.m  p1_initialize.m  p1_input.m  p1_light.m  p1_main.asv  p1_main.m  p1_move.asv  p1_move.m  p1_move_fail.m
